# movie-ticket-booking-api

./: README.md  pyproject.toml  requirements.txt
base/: settings.py  urls.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py  0002_alter_movie_duration_minutes.py  0003_alter_movie_duration_minutes_show_booking.py  0004_alter_show_movie.py  0005_alter_show_movie.py
core/schema/: responses.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/schema/: responses.py
